--- a/app/blocks/offer-item/offer-item.scss
+++ b/app/blocks/offer-item/offer-item.scss
@@ -20,6 +20,8 @@
   &__head {
     display: block;
     padding: 13px 0 16px;
+    touch-action: manipulation;
+    cursor: pointer;
 
     .offer-info {
       width: 100%;
