--- a/app/blocks/panel/panel.scss
+++ b/app/blocks/panel/panel.scss
@@ -26,6 +26,8 @@
     transition: background $ease-main, color $ease-main;
     box-sizing: border-box;
     padding: 10px $container-padding-tablet;
+    touch-action: manipulation;
+    cursor: pointer;
 
     @include screen('sm') {
       padding: 10px $container-padding-mobile;
