--- a/app/blocks/spoiler/spoiler.scss
+++ b/app/blocks/spoiler/spoiler.scss
@@ -43,6 +43,8 @@
     z-index: 3;
     display: block;
     width: 100%;
+    cursor: pointer;
+    touch-action: manipulation;
 
     @include text15;
 
