--- a/app/components/offer-short/offer-short.scss
+++ b/app/components/offer-short/offer-short.scss
@@ -4,8 +4,11 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  touch-action: manipulation;
 
   &__info {
+    touch-action: manipulation;
+
     @include screen('sm') {
       width: 100%;
     }
@@ -152,6 +155,7 @@
     width: 100%;
     box-sizing: border-box;
     padding-right: 12px;
+    touch-action: manipulation;
 
     @include screen('sm') {
       padding-right: 0;
